--- a/templates/user/signin.html
+++ b/templates/user/signin.html
@@ -14,7 +14,7 @@
                     <input type="text" class="form-control" id="username" name="username">
                 </div>
                 <div class="form-group mt-2 mb-2">
-                    <label for="password">Password</label>
+                    <label for="password">비밀번호</label>
                     <input type="password" class="form-control" id="password" name="password">
                 </div>
                 <hr>
