style : 템플릿 스타일 개선 1. 폰트 적용 2. 이미지 업로드 페이지에 네비게이션바 적용 3. 이미지 업로드 페이지 전체적인 스타일 수정 4. 불필요한 로그인/회원가입 버튼 삭제

--- a/templates/user/signin.html
+++ b/templates/user/signin.html
@@ -14,7 +14,7 @@
                     <input type="text" class="form-control" id="username" name="username">
                 </div>
                 <div class="form-group mt-2 mb-2">
-                    <label for="password">비밀번호</label>
+                    <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" name="password">
                 </div>
                 <hr>
@@ -25,23 +25,9 @@
                 {% endif %}
                 <div style="float: right">
                     <button type="submit" class="btn btn-primary">로그인</button>
-                    <a href="/signup" class="btn btn-secondary">회원가입</a>
                 </div>
             </form>
 
         </div>
     </div>
 {% endblock %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
