--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,17 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+        <link href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
             crossorigin="anonymous"></script>
         <style>
+            /* 폰트 전체적용 */
+            * {
+                font-family: 'Gaegu', cursive;
+            }
+
+            /* base.html css */
             .title-center {
                 text-align: center;
                 margin-top: 50px;
@@ -28,6 +34,13 @@
 
             .timeline-container {
                 margin-top: 25px
+            }
+
+            /* upload-file.html css */
+            .border_feed_box {
+                display: flex;
+                justify-content: center;
+                padding-top: 50px;
             }
         </style>
     </head>
