style : 이미지 업로드 템플릿 수정 1. title 항목 추가 2. 이미지 크기 조정

--- a/templates/tweet/upload-file.html
+++ b/templates/tweet/upload-file.html
@@ -13,9 +13,21 @@
         </div>
         <label for="imgs" class="form-label" style="font-weight:bold; margin-top: 20px; margin-bottom: 10px;">
         </label>
+        <input type="text" name="fileTitle" placeholder="Enter a title">
         <input type="file" name="uploadedFile">
 
         <button type="submit" class="btn btn-outline-dark" class="post_btn">Upload</button>
     </form>
 </div>
+<hr>
+
+{% for file in files %}
+<div class="border_feed_box" style="padding: 20px;">
+    <div class="feed_like">
+        <p class="feed_txt"><b>Title {{ file.title }}</b></p>
+        <img class="feed_img" src='{{ file.image.url }}'><br>
+    </div>
+</div>
+{% endfor %}
+
 {% endblock %}
