--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,18 @@
                 justify-content: center;
                 padding-top: 50px;
             }
+
+            .image_view {
+                width: 300px;
+                height: 150px;
+                object-fit: cover;
+            }
+
+            .feed_img {
+                width: 300px;
+                height: 300px;
+                object-fit: cover;
+            }
         </style>
     </head>
 
