style : result.html 템플릿 수정

--- a/templates/tweet/result.html
+++ b/templates/tweet/result.html
@@ -22,7 +22,7 @@
 </div>
 <hr>
 <div class="border_feed_box" style="padding: 20px;">
-    <img class="feed_img" src="{% static 'tweet/asd.jpg' %}">
+    <img class="feed_img" src="{% static 'tweet/result.png' %}">
 </div>
 
 
