refact : 코드 리팩토링
- 장고와 머신러닝 머지 이후 기능 구현
- corn_ma/settings.py : STATICFILES_DIR 추가
- corn_ma/urls.py : 전역 설정을 위한 if settings.DEBUG 위치 변경
- templates/tweet/upload-file.html : title 입력 시 오류 발생으로 line 17 hidden 처리
- templates/bast.html : css 추가
- tweet/models.py :
	이미지 이름 변경을 위한 def rename_imagefile_to_uuid(instance, filename) 추가
	이미지 이름 덮어쓰기를 위한 class OverwriteStorage(FileSystemStorage) 추가
- tweet/views.py : run_cat.py 구동을 위한 def pumjong(request) 추가
Open #4

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,16 @@
                 height: 300px;
                 object-fit: cover;
             }
+
+            .feed_txt{
+                text-align: center;
+                font-size: 30px;
+            }
+
+            .form-label{
+                text-align: center;
+                font-size: 22px;
+            }
         </style>
     </head>
 
