--- a/templates/tweet/upload-file.html
+++ b/templates/tweet/upload-file.html
@@ -8,24 +8,27 @@
     <form action="{% url 'tweet:img_list' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="mb-3" style="margin-top: 20px; margin-bottom: 20px;">
-            <label for=" exampleFormControlTextarea1 " class=" form-label" style="font-weight: normal"> {{ user }}님,
-                📷사진을 선택하세요 </label>
+            <label for=" exampleFormControlTextarea1 " class=" form-label" style="font-weight: normal"> <b>{{ user }}</b>님,
+                품종이 궁금한 고양이 📷을 넣어주세요!</label>
         </div>
         <label for="imgs" class="form-label" style="font-weight:bold; margin-top: 20px; margin-bottom: 10px;">
         </label>
-        <input type="text" name="fileTitle" placeholder="Enter a title">
+        <!-- fileTitle 없으면 문제 발생 > hidden 으로 숨겨둠-->
+        <input type="hidden" name="fileTitle" placeholder="Enter a title">
         <input type="file" name="uploadedFile">
-
-        <button type="submit" class="btn btn-outline-dark" class="post_btn">Upload</button>
+        
+        <!-- class 중복으로 인한 삭제 -->
+        <button type="submit" class="btn btn-outline-dark">Upload</button>
     </form>
 </div>
 <hr>
 
-{% for file in files %}
+<!-- 최대 1장만 보여지도록 slice 추가 -->
+{% for file in files|slice:":1" %}
 <div class="border_feed_box" style="padding: 20px;">
     <div class="feed_like">
-        <p class="feed_txt"><b>Title {{ file.title }}</b></p>
-        <img class="feed_img" src='{{ file.image.url }}'><br>
+        <p class="feed_txt">🐱 <b><a href="pumjong">품종 확인</a></b> 🐱</p>
+        <img class="feed_img" src={{ file.image.url }}><br>
     </div>
 </div>
 {% endfor %}
